# MOVA

./: .gitignore  API_INTEGRATION_PLAN.md  API_INTEGRATION_TESTING_REPORT.md  API_INTEGRATION_WEEK_5_1_COMPLETION_REPORT.md  ASYNC_IMPLEMENTATION_REPORT.md  ASYNC_TESTING_REPORT.md  CHANGELOG.md  CLI_INTEGRATION_COMPLETION_REPORT.md  DOCUMENTATION_UPDATE_REPORT.md  FINAL_INTEGRATION_REPORT.md  FRONTEND_DEVELOPMENT_PLAN.md  FRONTEND_PHASE_2_1_COMPLETION_REPORT.md  FRONTEND_PHASE_4_PLAN.md  FRONTEND_PHASE_4_WEEK_2_PLAN.md  FRONTEND_PHASE_4_WEEK_3_COMPLETION_REPORT.md  FRONTEND_PHASE_4_WEEK_3_PLAN.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  LICENSE  ML_INTEGRATION_FINAL_REPORT.md  ML_INTEGRATION_IMPLEMENTATION_REPORT.md  MOVA_2.2  PLAN.md  PLAN_COMPLETION_REPORT.md  PLAN_SDK_ARCHITECTURE.md  PROJECT_STATUS_UPDATE.md  README.md  ROADMAP.md  SDK_SKELETON_SNIPPET.md  TESTING_REPORT.md  WEBHOOK_IMPLEMENTATION_REPORT.md  WEBHOOK_TESTING_REPORT.md  WEB_INTERFACE_COMPLETION_REPORT.md  WEB_INTERFACE_PHASE_2_COMPLETION_REPORT.md  WEB_INTERFACE_PHASE_3_COMPLETION_REPORT.md  WEB_INTERFACE_PHASE_4_WEEK_1_COMPLETION_REPORT.md  WEB_INTERFACE_PHASE_4_WEEK_2_PART_1_COMPLETION_REPORT.md  WEB_INTERFACE_QUICK_START.md  conftest.py  demo_cli.py  (+11 more)
.github/workflows/: ci.yml  tests.yml
docs/: ARCHITECTURE.md  DEVELOPMENT_PROCESS.md  ML_INTEGRATION.md  ML_INTEGRATION_PLAN.md  MOVA_2.2_FEATURES.md  README.md  REDIS_INTEGRATION.md  WEBHOOK_SUPPORT.md
examples/: basic_example.json  cli_usage_examples.md  config.yaml  config_example.yaml  presets_and_tool_calling_example.json  redis_example.py  sdk_usage.py
models/: registry.json
models/intent_classifier_trained/: config.json
mova_sdk/api/: __init__.py
mova_sdk/cli/: __init__.py  main.py
mova_sdk/core/: __init__.py  (+1 more)
test_models/: config.json  metrics.json  model.pkl
tests/: README.md  __init__.py  run_tests.py  test_engine.py  test_models.py  test_redis_integration.py
web_interface/: README.md  __init__.py  integration_config.py
(+139 files in other folders)
