[project]
name = "mova-sdk"
version = "0.1.0"
description = "MOVA SDK"
authors = [{ name="Leryk1981", email="your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy", "flake8", "black"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"